--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -63,7 +63,7 @@
     margin-top: 66px;
     min-width: 200px;
     height: 327px;
-    background-image: url("../../images/IMG_4176.jpg");
+    background-image: url("../../images/IMG_4176.jpeg");
     background-size: cover;
   }
 }
