--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,15 +1,26 @@
 .header {
   max-width: 1280px;
-
+  background-color: #dddee3;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 18px;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  margin-left: 70px;
-  margin-right: 70px;
+  padding: 18px 70px 0;
+  &_hide {
+    display: none;
+  }
+  &_back {
+    max-width: 1280px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    background-color: #fafafa;
+  }
 
   &__menu {
     display: flex;
@@ -20,11 +31,10 @@
   &__logo {
     width: 38px;
     height: 38px;
-    background-image: url("../../images/logo.png");
   }
   &__link {
+    color: #000000;
     text-decoration: none;
-
     &:visited {
       color: #000000;
     }
@@ -43,6 +53,9 @@
     background-color: #3456f3;
     border-radius: 3px;
     color: white;
+    &:visited {
+      color: white;
+    }
   }
 }
 
@@ -57,13 +70,15 @@
 }
 @media (max-width: 768px) {
   .header {
-    margin: 0 30px 0;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
 @media (max-width: 320px) {
   .header {
-    margin: 0 14px 0;
+    padding-left: 14px;
+    padding-right: 14px;
     font-size: 10px;
   }
 }
