--- a/src/components/NavTab/Navtab.scss
+++ b/src/components/NavTab/Navtab.scss
@@ -14,6 +14,7 @@
     background-color: rgb(183, 183, 183);
   }
   &__link {
+    color: #000000;
     text-decoration: none;
     &:visited {
       color: #000000;
