--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -2,18 +2,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 18px;
-  margin: 0 70px 0;
+  // padding-top: 18px;
+  // margin: 0 70px 0;
   color: #000000;
+  width: 100%;
 
   &__logo {
     width: 38px;
     height: 38px;
     margin-right: 62px;
-    background-image: url("../../images/logo.png");
   }
 
   &__link {
+    color: #000000;
     text-decoration: none;
     font-weight: 500;
     font-size: 12px;
@@ -43,6 +44,7 @@
     border-radius: 40px;
   }
   &__text {
+    color: #000000;
     font-weight: 500;
     font-size: 13px;
     line-height: 12px;
@@ -88,8 +90,6 @@
 
 @media (max-width: 768px) {
   .navigation {
-    margin-left: 13px;
-    margin-right: 13px;
     &__menu {
       display: none;
     }
@@ -98,7 +98,7 @@
     }
     &__burger-menu {
       background-image: url("../../images/hamburger_icon.svg");
-      width: 44px;
+      width: 40px;
       height: 44px;
       background-color: transparent;
       border-radius: 0;
