--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -32,6 +32,11 @@
     }
   }
   &__link-a {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: #000000;
     text-decoration: none;
     &:visited {
       color: #000000;
