--- a/src/components/Register/register.scss
+++ b/src/components/Register/register.scss
@@ -23,7 +23,7 @@
     margin-top: 70px;
     width: 38px;
     height: 38px;
-    background-image: url("../../images/logo.png");
+    background-image: url("../../images/logo.svg");
   }
   &__title {
     text-align: left;
