--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin: 80px 70px 30px;
+    margin: 80px 70px 24px;
   }
   &__input {
     width: 100%;
@@ -19,6 +19,7 @@
     background-color: #f4f4f4;
     border: 0;
     border-radius: 4px;
+    padding-left: 22px;
   }
   &__button {
     min-width: 70px;
@@ -60,8 +61,8 @@
 
 @media (max-width: 550px) {
   .search-form {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 14px;
+    margin-right: 14px;
     font-size: 11px;
     line-height: 18px;
   }
