--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,6 +21,9 @@
     line-height: 16px;
     background-color: #fafafa;
   }
+  &_back_main {
+    background-color: #dddee3;
+  }
 
   &__menu {
     display: flex;
