--- a/src/components/MoviesCardList/MoviesCardList.scss
+++ b/src/components/MoviesCardList/MoviesCardList.scss
@@ -5,6 +5,10 @@
   row-gap: 58px;
   max-width: 1200px;
   margin: 46px 70px 0;
+  &__not-found {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 1170px) {
